// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluggableColumnChart > Sort config > should provide attribute normal sort as default sort, attribute area and measure sort as available sorts for 2M + 1VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
      "metricSorts": [
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide attribute normal sort as default sort, attribute normal and attribute area available sorts for 1M + 1VB + 1SB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide attribute normal sort as default sort, attribute normal and attribute area available sorts for 1M + 2VB + 1SB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a2",
      },
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    {
      "attributeSortItem": {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide attribute normal sort as default sort, attribute normal and measure sort as available sorts for 1M + 1VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": false,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
      "metricSorts": [
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide attribute normal sort as default sort, one attribute area and two measure sorts as available sorts for 2 stacked M + 1VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
      "metricSorts": [
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide attribute normal sorts as default sort, two attribute normal, one area sort and one measure sort as available sort for 1M + 2 VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
    {
      "attributeSort": {
        "areaSortEnabled": false,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a2",
      },
      "metricSorts": [
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    {
      "attributeSortItem": {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide two attribute normal sorts as default sort, two attribute area and one measure sorts as available sorts for 2 stacked M + 2VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a2",
      },
      "metricSorts": [
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    {
      "attributeSortItem": {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart > Sort config > should provide two attribute normal sorts as default sort, two attribute area and one measure sorts as available sorts for 2M + 2VB 1`] = `
{
  "appliedSort": [],
  "availableSorts": [
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a1",
      },
    },
    {
      "attributeSort": {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": {
        "localIdentifier": "a2",
      },
      "metricSorts": [
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        {
          "locators": [
            {
              "measureLocatorItem": {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    {
      "attributeSortItem": {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;
